<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.sewingMachines.SewingMachineDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgSewingMachineDetails"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:contentDescription="@string/imgSewingMachineDetails"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:padding="1dp"
            android:background="@drawable/image_view_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtSewingMachineName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/txtSewingMachineName"
            android:theme="@style/AppTheme.DARKBLUE"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.50"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgSewingMachineDetails"
            app:layout_constraintVertical_bias="0.2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtSewingMachineName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/txtSewingMachineName"
                android:singleLine="true"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtMotorSteps"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:hint="@string/label_motor_steps"
            android:theme="@style/AppTheme.DARKBLUE"
            app:endIconMode="clear_text"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/txtSewingMachineName"
            app:layout_constraintTop_toBottomOf="@+id/txtSewingMachineName"
            app:layout_constraintVertical_bias="5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etxtMotorSteps"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/label_motor_steps"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnTrySteps"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/btn_try_steps"
            android:theme="@style/AppTheme.DARKBLUE"
            app:layout_constraintBottom_toBottomOf="@+id/txtMotorSteps"
            app:layout_constraintStart_toEndOf="@+id/txtMotorSteps"
            app:layout_constraintTop_toTopOf="@+id/txtMotorSteps" />

        <Button
            android:id="@+id/btnSewingMachineAction"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:text="@string/btnSewingmachinesActionDefault"
            android:theme="@style/AppTheme.DARKBLUE"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/btnDeleteSewingMachine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/delete_button"
            android:src="@drawable/ic_baseline_delete_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>