<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardMachine"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgMachine"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:background="@color/primaryDarkColorGray"
            android:contentDescription="@string/img_machine"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txtSewingMachineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/machine_name"
            android:textAppearance="?attr/textAppearanceHeadline6" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>